--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ body {
   padding: 10px;
   border-radius: 20px;
   text-align: center;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .project-section .feature-card:hover {
