--- a/style.css
+++ b/style.css
@@ -207,8 +207,8 @@ body {
 }
 
 .project-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  display: flex;
+  flex-direction: row;
   gap: 25px;
   max-width: 1200px;
   margin: auto;
