--- a/style.css
+++ b/style.css
@@ -136,20 +136,19 @@ body {
 
 .img-profil {
   height: 70vh;
-  object-fit: cover;
   border-radius: 12px;
   margin-left: 70px;
   box-shadow: 10px 10px 10px #444;
   gap: 20px;
 }
 
-.features-section1 {
+.features-section {
   background-color: #ddd;
   padding: 80px 0;
   text-align: center;
 }
 
-.features-section1 .container {
+.features-section .container {
   flex-direction: column;
   text-align: center;
 }
@@ -160,7 +159,7 @@ body {
   margin-bottom: 60px;
 }
 
-.features-grid {
+.features-flex {
   display: flex;
   gap: 50px;
 }
@@ -260,39 +259,41 @@ body {
   background-color: #0d5ed6;
 }
 
-.section3 {
+.section2 {
   background-color: #ddd;
   padding: 70px;
   text-align: center;
 }
 
-.section3 h2 {
+.section2 h2 {
   font-weight: bold;
   font-size: 42px;
 }
 
-.section3 p {
+.section2 p {
   padding-top: 20px;
 }
 
-.section3 ul {
+.section2 ul {
   display: flex;
   justify-content: center;
   padding-top: 60px;
   gap: 30px;
 }
 
-.section3 li {
+.section2 li {
   list-style: none;
+  background-color: #1f6feb;
+  border-radius: 50%;
+  padding-top: 7px;
+  width: 50px;
+  height: 50px;
 } 
 
-.section3 a {
-  background-color: #1f6feb;
-  border-radius: 8px;
+.section2 a {
   color: white;
-  padding: 10px 20px;
+  font-size: 24px;
   text-decoration: none;
-  display: flex;
 }
 
 footer {
